# my-tauri-updater

./: .gitignore  CHANGELOG.md  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.mts
.changes/: add-dependencies.md  apply-new-script.md  cleanup-workflows.md  config.json  fix-binary-name-output.md  fix-the-canary-build.md  fix-workflow.md  further-reduce-workflows-needed.md  futher-modularize-workflows.md  generalize-post-publish.md  generalize-workflows.md  get-channel-from-node-scripts.md  get-output-in-workflows.md  handle-windows-prerelease-versioning.md  handle-windows-versioning.md  modularize-workflows.md  move-publish-jobs.md  move-to-pnpm.md  move-to-rc.md  overhaul-ci.md  pre.json  publish-configs.md  refine-logic.md  refine-release.md  set-retention-days.md  set-up-covector.md  simplify-build-setup.md  simplify-version-set-scripts.md  stable.md  take-new-workflows-stable.md  update-config.md  update-covector-config.md  update-workflow-lockfile-handling.md  use-a-canary-build.md  use-a-matrix-fixure-to-publish.md  workflow-cleanup.md  workflows-better-formatting.md
.github/fixtures/: matrix_pr.json  matrix_publish.json  matrix_publish_prerelease.json  matrix_publish_stable.json  matrix_release.json
.github/workflows/: build-scripts.yml  build-to-release.yml  covector-status.yml  covector-version-or-publish.yml  get-version.yml  main.yml  matrix-prep.yml  publish-app.yml  publish-matrix-prep.yml  publish-to-auto-release.yml  push-to-aws.yml  push-to-s3.yml
.scripts/: build.ts  config.ts  create-release.ts  current-msi-version.ts  current-version.ts  env.ts  get-build-matrix.cjs  get-msi-version.cjs  get-msi-version.ts  get-packages-published.cjs  get-release-channel.cjs  get-release-channel.ts  get-release-type.ts  get-target-info.ts  get-version.cjs  get-version.ts  index.ts  init-project.ts  input.ts  just-release-json.test.ts  just-release-json.ts  print-msi-version.ts  print-release-channel.cjs  print-release-channel.ts  print-release-type.ts  print-version.cjs  print-version.ts  runner.ts  set-msi-version.cjs  set-msi-version.ts  set-version.cjs  set-version.ts  types.ts  upload-release-assets.ts  upload-version-json.ts  utils.ts
infra/: buckets.tf  imports.tf  providers.tf  terraform.tfvars.example  variables.tf
src/: App.css  App.tsx  bindings.ts  update.ts
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_updates.rs  lib.rs  main.rs
