[package]
name = "my-tauri-updater"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_tauri_updater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta-typescript = "0.0.7"
specta = { version = "=2.0.0-rc.20", features = ["tokio", "function", "time"] }
specta-util = "0.0.7"
tauri = { version = "2.2.0", features = ["specta"] }
tauri-plugin-process = "2"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
taurpc = "0.3.3"
thiserror = "2.0.9"
tokio = "1.42.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2.3.1", features = ["specta"] }

[patch.crates-io]
tauri = { path = "../../../johncarmack1984/tauri/crates/tauri" }
tauri-plugin-updater = { path = "../../../johncarmack1984/plugins-workspace/plugins/updater" }
