[package]
name = "my-tauri-updater"
version = "0.5.6"
description = "A Tauri App"
authors = ["John Carmack"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_tauri_updater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
specta-typescript = "0.0.9"
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-util = "0.0.9"
tauri = { version = "2.5.1", features = ["protocol-asset"] }
tauri-plugin-process = "2.2.1"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
taurpc = "0.5.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2.7.1", features = ["specta"] }

[patch.crates-io]
tauri-plugin-updater = { git = "https://github.com/johncarmack1984/plugins-workspace.git", rev = "b46eb6eef2961b0bf97f7855ffba64242d1309a8" }
